Development Portal (2020-04-18 shi)
==============================
Update glossary
Hide extra filter options for now
Hide other trending buttons for now
Reposition transaction type 11 above 1


Development Portal (2020-04-17 shi)
==============================
Update more filters css
Update to text_search for trending


Development Portal (2020-04-16 shi)
==============================
Update css
Update covid-19 keyword
Update to 0% when percentage missing, js 0 is false


Development Portal (2020-04-15 shi)
==============================
Check if sector code has narrative if non-dac
Display percentage complete for activity dates on hover
Add empty description for policy marker significance
Update css
Display location @srsName as a link when found
Update participating-org column layout
Update length to flex so it lays out nicely


Development Portal (2020-04-14 shi)
==============================
Update glossary for search
Update placeholder text for activity list query
Display rows when only result period and no value is found
Update css for fullwidth search filters
Update dquery css


Development Portal (2020-04-12 shi)
==============================
Display codes for transaction attributes
Update css


Development Portal (2020-04-12 shi)
==============================
Update glossary for search
Add trending search buttons
Update css
Add keyword search to filters
Update all translations


Development Portal (2020-04-11 shi)
==============================
Display array for default-aid-type
Fix layout legibility for result indicator reference
Fix layout legibility for receiver and provider columns in tables
Update placeholder text for total commitment search dropdown


Development Portal (2020-04-08 shi)
==============================
Add print-friendly css for new SAVi
Fix typo for @activity-id in participating-org
Fix urls for @ref
Display name element for org files


Development Portal (2020-04-04 shi)
==============================