@@ -350,6 +350,9 @@ table.filter_table td.filter_title	{padding-top:20px; padding-bottom:5px; text-t
 
 .search_input_wrap			{position:relative;}
 .search_icon				{position:absolute; top:28px; left:-40px;}
+.search_method_text			{color:#ccc; font-size:14px; line-height:16px;}	/*	Methodology explained in resulting pages after search query	*/
+.search_method_text a		{color:#97d8ff}
+.search_method_text a:hover	{color:#fff}
 
 .search_glossary_wrap		{margin-top:10px; position:relative; width:960px; margin:0 auto; margin-top:-10px;}
 .search_glossary			{padding:20px 30px; box-sizing:border-box; width:960px; margin:0 auto; background-color:#223139; color:#fff; font-size:1.1em; line-height:1.5em; margin-bottom:15px;}
