@@ -301,6 +301,10 @@
 	<div class="status_code"><a href="{search_text}">{search_text}</a></div><span>{search_external_txt}</span>
 </div>
 
+<div class="search_method_text">
+	This COVID-19 search follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title and description fields and looks for the relevant codes in the humanitarian-scope element.
+</div>
+
 #search_display_country trim=ends
 <div class="search_query">
 	<div class="recipient">{search_text}</div><span><img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}</span>
