@@ -945,7 +945,7 @@
 		{_it./transaction-13&&_it:transaction-13||}
 	</div>
 	
-<!--	RESULT LENGTH	-->
+<!--	TRANSACTION LENGTH	-->
 #^transaction-1-length
 <div class="length">Incoming Funds <span class="count">( {_it./transaction-1.length||no_length} )</span></div>
 #^transaction-2-length
