@@ -4,6 +4,7 @@ Update glossary
 Hide extra filter options for now
 Hide other trending buttons for now
 Reposition transaction type 11 above 1
+Display methodology for trending button in resulting pages (temp)
 
 
 Development Portal (2020-04-17 shi)
